# devenv

./: .gitignore  Brewfile  Dockerfile  LICENSE  README.md  README.rst  devenv.pkr.hcl  install-pyenv.yml  mkosi.build  mkosi.default  pyproject.toml
.github/workflows/: test.yml
git/: Brewfile
homebrew/defaults/: main.yml
homebrew/tasks/: main.yml
mkosi.extra/: Brewfile
pyenv/defaults/: main.yml
pyenv/tasks/: Ubuntu.yml  main.yml
pyenv/vars/: main.yml
python/: Brewfile
